# fast_zero_dunossauro

./: README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  utils.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 2a91947a614f_create_users_table.py  71ebdab45bb2_update_todos_table.py  fb04bc9f2484_update_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_user.py  test_users.py
